# Woodiwiss-Consultants

./: README.md
.github/: deploy-cms.yml
.github/workflows/: deploy-cms-dev.yml  deploy-cms-live.yml  deploy-cms.yml  deploy-image-hosting-dev.yml  deploy-image-hosting-live.yml  deploy-image-hosting.yml  deploy-ui-dev.yml  deploy-ui-live.yml
Content-Management-Api/: .gitignore  .htaccess  README.md  composer.json  index.php  phpunit.xml  settings.ini
Content-Management-Api/database/: CreateDb.sql
Content-Management-Api/src/: AppConfig.php  ContentManagementApi.php
Content-Management-Api/src/Controllers/: AccountController.php  ContactController.php  ContentController.php  Controllers.php  HomeController.php  OptionsController.php  UserController.php
Content-Management-Api/src/Db/: EditorContent.php  EditorContentContext.php  User.php  UsersContext.php
Content-Management-Api/src/Models/: ContactFormModel.php  ContentModel.php  DeleteUserFormModel.php  LoginFormModel.php  NewUserFormModel.php  UpdateContentModel.php  UpdateUserFormModel.php  UserModel.php
Content-Management-Api/src/Providers/: DateTimeProvider.php  JwtProvider.php  includes.php
Content-Management-Api/src/Services/: AuthorisationService.php  ContentManagementService.php  EmailService.php  (+4 more)
Image-Hosting-Service/: .gitignore  Cargo.toml  README.md  config.json
Image-Hosting-Service/acs-image-analysis/: Cargo.toml
Image-Hosting-Service/acs-image-analysis-test/: Cargo.toml
Image-Hosting-Service/acs-image-analysis-test/src/: main.rs
Image-Hosting-Service/acs-image-analysis/src/: error.rs  lib.rs
Image-Hosting-Service/acs-image-analysis/src/data/: mod.rs
Image-Hosting-Service/acs-image-analysis/src/infra/: http_client.rs  http_client_t.rs  mod.rs  test.rs
Image-Hosting-Service/acs-image-analysis/src/internal/: azure_image_analysis.rs  mod.rs
Image-Hosting-Service/acs-image-analysis/test/: image_description_response.json  invalid_image_format.json
Image-Hosting-Service/image-hosting-service/: Cargo.toml  diesel.toml
Image-Hosting-Service/image-hosting-service/migrations/2021-12-07-095038_create_images/: down.sql  up.sql
Image-Hosting-Service/image-hosting-service/migrations/2021-12-08-134149_add_image_hidden/: down.sql  up.sql
Image-Hosting-Service/image-hosting-service/migrations/2021-12-13-155050_add_image_filetype/: down.sql  up.sql
Image-Hosting-Service/image-hosting-service/src/: main.rs
Image-Hosting-Service/image-hosting-service/src/data/: config.rs  image.rs  mod.rs  view_model.rs
Image-Hosting-Service/image-hosting-service/src/database/: mod.rs  schema.rs
Image-Hosting-Service/image-hosting-service/src/endpoints/: home.rs  image.rs  images.rs  mod.rs
Image-Hosting-Service/image-hosting-service/src/fairings/: mod.rs
Image-Hosting-Service/image-hosting-service/src/guards/: mod.rs
Image-Hosting-Service/image-hosting-service/src/middleware/: mod.rs
Image-Hosting-Service/image-hosting-service/src/responders/: mod.rs
Image-Hosting-Service/image-hosting-service/src/service/: azure_storage_provider.rs  image_analysis.rs  image_db_service.rs  mod.rs  resize.rs  service_t.rs  storage_provider.rs
Woodiwiss-Consultants-Web/: .editorconfig  .gitattributes  .gitignore  jest.config.js  package.json
Woodiwiss-Consultants-Web/src/: main.ts  styles.scss
Woodiwiss-Consutlants-Web/: .eslintrc.js  README.md  angular.json  easyGenerate.js  jest.config.js  package.json  tsconfig.spec.json
Woodiwiss-Consutlants-Web/src/: .htaccess  index.html  styles.scss
(+197 files in other folders)
