[package]
name = "acs-image-analysis-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.14.0", features = ["full"]}
acs-image-analysis = { path = "../acs-image-analysis" }
serde = {version = "1.0.130", features = ["derive"]}
serde_json = {version = "1.0.72"}
