[package]
name = "image-hosting-service"
version = "0.1.0"
edition = "2021"

[features]
remote-storage = [
	"dep:azure_core",
	"dep:azure_storage",
	"dep:azure_storage_datalake"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}
diesel = {version = "1.4.8", features = ["mysql"] }
serde = {version = "1.0.130", features = ["derive"]}
figment = { version = "0.10.6", features = ["env", "toml", "json"] }
image = "0.24.2"
acs-image-analysis = { path = "../acs-image-analysis" }
uuid = { version = "1.1.1", features = ["v4"] }
azure_core = { version = "0.2.0", optional = true }
azure_storage = { version = "0.2.0", optional = true }
azure_storage_datalake = { version = "0.2.0", optional = true }

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.2"
default-features = false
features = ["diesel_mysql_pool"]

[dev-dependencies]
tokio = { version = "1.14.0", features = ["rt", "macros"] }
mockall = "0.11.0"
serial_test = "0.6.0"
